--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "serverRSS.js",
   "scripts": {
+    "start": "nodemon serverRSS.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "moi",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.3.4",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
   }
 }
